--- a/EcommWeb/shop/templates/shop/prodView.html
+++ b/EcommWeb/shop/templates/shop/prodView.html
@@ -19,33 +19,28 @@ html, body {
 
 /* Columns */
 .left-column {
-  width: 65%;
+  width: 50%;
   position: relative;
 }
 
 .right-column {
-  width: 35%;
+  width: 50%;
   margin-top: 60px;
 }
 
 
 /* Left Column */
 .left-column img {
-  width: 100%;
+  width: 50%;
   position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0;
+  margin-top: 30px;
+  opacity: 1;
   transition: all 0.3s ease;
 }
 
-.left-column img.active {
-  opacity: 1;
-}
 
 
 /* Right Column */
-
 /* Product Description */
 .product-description {
   border-bottom: 1px solid #E1E8EE;
@@ -237,7 +232,7 @@ html, body {
 
       <!-- Left Column / Headphones Image -->
       <div class="left-column">
-        <img src="{{ product.image }}" width="233px" height="385px">
+        <img src="/media/{{product.image}}" width="233px" height="385px">
       </div>
 
 
