--- a/EcommWeb/shop/templates/shop/index.html
+++ b/EcommWeb/shop/templates/shop/index.html
@@ -1,4 +1,7 @@
 {% extends 'shop/basic.html' %}
+
+{% block title%} Home - My Ecomm Web{% endblock %}
+
 {% block css %}
 .col-md-3
 {
@@ -40,10 +43,87 @@ body .no-padding{
 padding-left: 0,
 padding-right: 0;
 }
+
+.t {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-decoration: none;
+    font-size: 28px;
+    transition: opacity 0.1s ease;
+}
+
+.t:hover {
+    font-size: 32px; /* Font size on hover */
+    transition: opacity 0.10s ease;
+    text-decoration: none;
+    color: white;
+
+}
 {% endblock %}
+
+
+
 {% block body %}
 {% load static %}
-<div class="container">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="width:100%; height:50%">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" style="height: 500px; object-fit: cover;" src="/media/shop/images/coverwatch.png" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" style="height: 500px; object-fit: cover;" src="/media/shop/images/covershoe.png" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" style="height: 500px; object-fit: cover;" src="/media/shop/images/coverphone.png" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" style="height: 500px; object-fit: cover;" src="/media/shop/images/coverphone.png" alt="Forth slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" style="height: 500px; object-fit: cover;" src="/media/shop/images/covergroc.png" alt="Fifth slide">
+      </div>
+    </div>
+</div>
+
+<div style="display: flex; justify-content: space-around; flex-wrap: wrap; margin-top: 60px;">
+    <div style="position: relative; margin: 10px; text-align: center;">
+        <img src="/media/shop/images/sshoes.jpeg" alt="Shoes" class="rounded-circle" style="width: 225px; height: 225px;">
+        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.3); border-radius: 50%;"></div>
+        <a class="t" href="/search?search=footwear" >Shoes</a>
+    </div>
+    <div style="position: relative; margin: 10px; text-align: center;">
+        <img src="/media/shop/images/ss.png" alt="Watches" class="rounded-circle" style="width: 225px; height: 225px;">
+        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.3); border-radius: 50%;"></div>
+        <a class="t" href="/search?search=watch" >Watches</a>
+    </div>
+    <div style="position: relative; margin: 10px; text-align: center;">
+        <img src="/media/shop/images/ssbag.webp" alt="Bags" class="rounded-circle" style="width: 225px; height: 225px;">
+        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.3); border-radius: 50%;"></div>
+        <a class="t" href="/search?search=bag" >Bags</a>
+    </div>
+    <div style="position: relative; margin: 10px; text-align: center;">
+        <img src="/media/shop/images/ssphone.jpg" alt="Phones" class="rounded-circle" style="width: 225px; height: 225px;">
+        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.3); border-radius: 50%;"></div>
+        <a class="t" href="/search?search=phone" >Phones</a>
+    </div>
+    <div style="position: relative; margin: 10px; text-align: center;">
+        <img src="/media/shop/images/ssgroc.webp" alt="Grocessary" class="rounded-circle" style="width: 225px; height: 225px;">
+        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.3); border-radius: 50%;"></div>
+        <a class="t" href="/search?search=grocessary" >Grocessary</a>
+    </div>
+</div>
+
+<div class="container mt-8">
     <!--Slideshow starts here -->
     {% for product, range, nSlides in allProds %}
     <h5 class="my-4">Flash Sale On {{product.0.category}} - Recommended Items</h5>
@@ -64,7 +144,7 @@ padding-right: 0;
                             <div class="card-body">
                                 <h5 class="card-title" id="namepr{{i.id}}">{{i.product_name}}</h5>
                                 <p class="card-text">{{i.desc|slice:"0:53"}}...</p>
-                                <h5 class="card-title" ><b>Rs: <span id="pricepr{{i.id}}">{{i.price}}</b></span></h5>
+                                <h5 class="card-title" ><b>Rs: <span id="pricepr{{i.id}}">{{i.price}}</span></b></h5>
                                 <span id="divpr{{i.id}}" class="divpr">
                                     <button id="pr{{i.id}}" class="btn btn-success cart">Add To Cart</button>
                                 </span>
@@ -93,6 +173,7 @@ padding-right: 0;
 {% endblock %}
 
 
+
 {% block js %}
 <script>
     // Find out the cart items from localStorage
@@ -105,7 +186,6 @@ padding-right: 0;
 
 
     // If the add to cart button is clicked, add/increment the item
-    //$('.cart').click(function() {
     $('.divpr').on('click', 'button.cart', function() {
         var idstr = this.id.toString();
         if (cart[idstr] != undefined) {
