--- a/EcommWeb/shop/templates/shop/search.html
+++ b/EcommWeb/shop/templates/shop/search.html
@@ -2,99 +2,58 @@
 
 {% block title%} Search Results - My Ecomm{% endblock %}
 
-
 {% block css %}
 .col-md-3
 {
 display: inline-block;
 margin-left:-4px;
 }
-.carousel-indicators .active {
-background-color: grey;
-}
+
 .col-md-3 img{
 width: 170px;
 height: 225px;
 }
-body .carousel-indicator li{
-background-color: grey;
-}
-.carousel-indicators{
-bottom: -10%;
-}
-body .carousel-control-prev-icon,
-body .carousel-control-next-icon{
-background-color: grey;
-}
-.carousel-control-prev,
-.carousel-control-next{
-top: auto;
-bottom: auto;
-padding-top: 222px;
-width: 5%;
 
-}
-.carousel-control-prev {
-left: 2%; 
-}  
-.carousel-control-next {
-right: 2%; 
-}
 body .no-padding{
 padding-left: 0,
 padding-right: 0;
 }
 {% endblock %}
+
+
+
 {% block body %}
 {% load static %}
 <div class="container">
-    <!--Slideshow starts here -->
-    {% for product, range, nSlides in allProds %}
-    <h5 class="my-4">Flash Sale On {{product.0.category}} - Recommended Items</h5>
+    <h4 class="my-4">Search Results </h4>
     <div class="row">
-        <div id="demo{{forloop.counter}}" class="col carousel slide my-3" data-ride="carousel">
-            <ul class="carousel-indicators">
-                <li data-target="#demo{{forloop.counter}}" data-slide-to="0" class="active"></li>
-                {% for i in range %}
-                <li data-target="#demo{{forloop.parentloop.counter}}" data-slide-to="{{i}}"></li>
-                {% endfor %}
-            </ul>
-            <div class="container carousel-inner no-padding">
-                <div class="carousel-item active">
-                    {% for i in product %}
-                    <div class="col-xs-3 col-sm-3 col-md-3">
-                        <div class="card align-items-center" style="width: 18rem;">
-                            <img src='/media/{{i.image}}' class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title" id="namepr{{i.id}}">{{i.product_name}}</h5>
-                                <p class="card-text">{{i.desc|slice:"0:53"}}...</p>
-                                <h6 class="card-title" >Price: <span id="pricepr{{i.id}}">{{i.price}}</span></h6>
-                                <span id="divpr{{i.id}}" class="divpr">
-                                    <button id="pr{{i.id}}" class="btn btn-success cart">Add To Cart</button>
-                                </span>
-                                <a href="/shop/products/{{i.id}}"><button id="qv{{i.id}}" class="btn btn-success cart">QuickView</button></a>
-                            </div>
-                        </div>
+        {% for product, range, nSlides in allProds %}
+            {% for i in product %}
+            <div class="col-xs-3 col-sm-3 col-md-3 mb-4">
+                <div class="card align-items-center" style="width: 18rem;">
+                    <img src='/media/{{i.image}}' class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title" id="namepr{{i.id}}">{{i.product_name}}</h5>
+                        <p class="card-text">{{i.desc|slice:"0:53"}}...</p>
+                        <h6 class="card-title">Price: <span id="pricepr{{i.id}}">{{i.price}}</span></h6>
+                        <span id="divpr{{i.id}}" class="divpr">
+                            <button id="pr{{i.id}}" class="btn btn-success cart">Add To Cart</button>
+                        </span>
+                        <a href="/shop/products/{{i.id}}"><button id="qv{{i.id}}" class="btn btn-success cart">QuickView</button></a>
                     </div>
-                    {% if forloop.counter|divisibleby:4 and forloop.counter > 0 and not forloop.last %}
-                </div>
-                <div class="carousel-item">
-                    {% endif %}
-                    {% endfor %}
                 </div>
             </div>
-        </div>
-        <!-- left and right controls for the slide -->
-        <a class="carousel-control-prev" href="#demo{{forloop.counter}}" data-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-        </a>
-        <a class="carousel-control-next" href="#demo{{forloop.counter}}" data-slide="next">
-            <span class="carousel-control-next-icon"></span>
-        </a>
+            {% endfor %}
+        {% endfor %}
     </div>
-    {% endfor %}
+    {% if allProds|length == 0 %}
+        <p class="mt-4">Please make sure to enter a relevant search query.</p>
+    {% endif %}
 </div>
 {% endblock %}
+
+
+
 {% block js %}
 <script>
 {% if msg|length != 0 %}
@@ -108,6 +67,7 @@ if (localStorage.getItem('cart') == null) {
     cart = JSON.parse(localStorage.getItem('cart'));
     updateCart(cart);
 }
+
 // If the add to cart button is clicked, add/increment the item
 //$('.cart').click(function() {
     $('.divpr').on('click', 'button.cart', function(){
@@ -122,6 +82,7 @@ if (localStorage.getItem('cart') == null) {
     }
     updateCart(cart);
 });
+
 //Add Popover to cart
 $('#popcart').popover();
 updatePopover(cart);
@@ -140,6 +101,7 @@ function updatePopover(cart) {
     document.getElementById('popcart').setAttribute('data-content', popStr);
     $('#popcart').popover('show');
 }
+
 function clearCart() {
     cart = JSON.parse(localStorage.getItem('cart'));
     for (var item in cart) {
@@ -149,6 +111,7 @@ function clearCart() {
     cart = {};
     updateCart(cart);
 }
+
 function updateCart(cart) {
     var sum = 0;
     for (var item in cart) {
@@ -160,6 +123,7 @@ function updateCart(cart) {
     console.log(cart);
     updatePopover(cart);
 }
+
 // If plus or minus button is clicked, change the cart as well as the display value
 $('.divpr').on("click", "button.minus", function() {
     a = this.id.slice(7, );
@@ -174,6 +138,7 @@ $('.divpr').on("click", "button.minus", function() {
     }
     updateCart(cart);
 });
+
 $('.divpr').on("click", "button.plus", function() {
     a = this.id.slice(6, );
     cart['pr' + a][0] = cart['pr' + a][0] + 1;
