--- a/EcommWeb/shop/templates/shop/tracker.html
+++ b/EcommWeb/shop/templates/shop/tracker.html
@@ -1,5 +1,7 @@
 {% extends 'shop/basic.html' %}
-{% block title%} Tracker - My Ecomm Web {% endblock %}
+
+{% block title %}Tracker - My Ecomm Web{% endblock %}
+
 {% block body %}
 <div class="container">
     <div class="col my-4">
@@ -7,16 +9,18 @@
         <form method="post" action="#" id="trackerForm">{% csrf_token %}
             <div class="form-row">
                 <div class="form-group col-md-6">
-                    <label for="inputname">Order Id</label>
-                    <input type="text" class="form-control" id="orderId" name="orderId" placeholder="Order Id">
+                    <label for="orderId">Order Id</label>
+                    <input type="text" class="form-control" id="orderId" name="orderId" placeholder="Order Id" required>
                 </div>
                 <div class="form-group col-md-6">
-                    <label for="inputEmail4">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
                 </div>
                 <button type="submit" class="btn btn-success">Track Order</button>
             </div>
+        </form>
     </div>
+
     <div class="col my-4">
         <h2>Your Order Status</h2>
         <div class="my-4">
@@ -32,6 +36,9 @@
     </div>
 </div>
 {% endblock %}
+
+
+
 {% block js %}
 <script>
 $('#trackerForm').submit(function(event) {
@@ -42,45 +49,45 @@ $('#trackerForm').submit(function(event) {
         'csrfmiddlewaretoken': $('input[name=csrfmiddlewaretoken]').val()
     };
     $.ajax({
-            type: 'POST',
-            url: '/shop/tracker/',
-            data: formData,
-            encode: true
-        })
-        .done(function(data) {
-            $('#citems').empty();
-            console.log(data)
-            data = JSON.parse(data);
-            if (data['status'] == 'success') {
-                updates = data['updates'];
-                for (i = 0; i < updates.length; i++) {
-                    let text = updates[i]['text'];
-                    let time = updates[i]['time'];
-                    mystr = `<li class="list-group-item d-flex justify-content-between align-items-center">
-                    ${text}
-                    <span class="badge badge-primary badge-pill">${time}</span>
-                </li>`
-                    $('#items').append(mystr);
-                }
-                // Fill in the order details
-                cart = JSON.parse(data['itemsJson']);
-                console.log(cart);
-                for (item in cart) {
-                    let name = cart[item][1];
-                    let qty = cart[item][0];
-                    mystr = `<li class="list-group-item d-flex justify-content-between align-items-center">
-                    ${name}
-                    <span class="badge badge-primary badge-pill">${qty}</span>
-                </li>`
-                    $('#citems').append(mystr);
-                }
-            } else {
+        type: 'POST',
+        url: '/shop/tracker/',
+        data: formData,
+        encode: true
+    })
+    .done(function(data) {
+        $('#citems').empty();
+        console.log(data);
+        data = JSON.parse(data);
+        if (data['status'] == 'success') {
+            updates = data['updates'];
+            for (i = 0; i < updates.length; i++) {
+                let text = updates[i]['text'];
+                let time = updates[i]['time'];
                 mystr = `<li class="list-group-item d-flex justify-content-between align-items-center">
-                    Sorry, We are not able to fetch this order id and email. Make sure to type correct order Id and email</li>`
+                ${text}
+                <span class="badge badge-primary badge-pill">${time}</span>
+            </li>`;
                 $('#items').append(mystr);
+            }
+            // Fill in the order details
+            cart = JSON.parse(data['itemsJson']);
+            console.log(cart);
+            for (item in cart) {
+                let name = cart[item][1];
+                let qty = cart[item][0];
+                mystr = `<li class="list-group-item d-flex justify-content-between align-items-center">
+                ${name}
+                <span class="badge badge-primary badge-pill">${qty}</span>
+            </li>`;
                 $('#citems').append(mystr);
             }
-        });
+        } else {
+            mystr = `<li class="list-group-item d-flex justify-content-between align-items-center">
+                Sorry, We are not able to fetch this order id and email. Make sure to type correct order Id and email</li>`;
+            $('#items').append(mystr);
+            $('#citems').append(mystr);
+        }
+    });
     event.preventDefault();
 });
 </script>
