--- a/EcommWeb/shop/templates/shop/search.html
+++ b/EcommWeb/shop/templates/shop/search.html
@@ -56,94 +56,114 @@ padding-right: 0;
 
 {% block js %}
 <script>
-{% if msg|length != 0 %}
-alert('{{msg}}');
-window.location.href = "/"
-{% endif %}
-// Find out the cart items from localStorage
-if (localStorage.getItem('cart') == null) {
-    var cart = {};
-} else {
-    cart = JSON.parse(localStorage.getItem('cart'));
-    updateCart(cart);
-}
-
-// If the add to cart button is clicked, add/increment the item
-//$('.cart').click(function() {
-    $('.divpr').on('click', 'button.cart', function(){
-    var idstr = this.id.toString();
-    if (cart[idstr] != undefined) {
-        qty = cart[idstr][0] + 1;
+    {% if msg|length != 0 %}
+    alert('{{msg}}');
+    window.location.href = "/"
+    {% endif %}
+    // Find out the cart items from localStorage
+    if (localStorage.getItem('cart') == null) {
+        var cart = {};
     } else {
-        qty = 1;
-        name = document.getElementById('name'+idstr).innerHTML;
-        price = document.getElementById('price'+idstr).innerHTML;
-        cart[idstr] = [qty, name, parseInt(price)];
+        cart = JSON.parse(localStorage.getItem('cart'));
+        updateCart(cart);
     }
-    updateCart(cart);
-});
+    
+    // Function to update the cart
+    function updateCart(cart) {
+        var sum = 0;
+        for (var item in cart) {
+            sum += cart[item][0];
+            var itemDiv = document.getElementById('div' + item);
+            if (itemDiv) {
+                itemDiv.innerHTML = "<button id='minus" + item + "' class='btn btn-success minus'>-</button> <span id='val" + item + "'>" + cart[item][0] + "</span> <button id='plus" + item + "' class='btn btn-success plus'> + </button>";
+            }
+        }
+        localStorage.setItem('cart', JSON.stringify(cart));
+        document.getElementById('cart').innerHTML = sum;
+        console.log(cart);
+        updatePopover(cart);
+    }
 
-//Add Popover to cart
-$('#popcart').popover();
-updatePopover(cart);
-function updatePopover(cart) {
-    console.log('We are inside updatePopover');
-    var popStr = "";
-    popStr = popStr + "<h5> Cart for your items in my shopping cart </h5><div class='mx-2 my-2'>";
-    var i = 1;
-    for (var item in cart) {
-        popStr = popStr + "<b>" + i + "</b>. ";
-        popStr = popStr + document.getElementById('name' + item).innerHTML.slice(0, 19) + "... Qty: " + cart[item][0] + '<br>';
-        i = i + 1;
-    }
-    popStr = popStr + "</div> <a href='/shop/checkout'><button class='btn btn-success' id ='checkout'>Checkout</button></a> <button class='btn btn-success' onclick='clearCart()' id ='clearCart'>Clear Cart</button>     "
-    console.log(popStr);
-    document.getElementById('popcart').setAttribute('data-content', popStr);
-    $('#popcart').popover('show');
-}
 
-function clearCart() {
-    cart = JSON.parse(localStorage.getItem('cart'));
-    for (var item in cart) {
-        document.getElementById('div' + item).innerHTML = '<button id="' + item + '" class="btn btn-success cart">Add To Cart</button>'
-    }
-    localStorage.clear();
-    cart = {};
-    updateCart(cart);
-}
+    // Add Popover to cart
+    $('#popcart').popover();
+    updatePopover();
 
-function updateCart(cart) {
-    var sum = 0;
-    for (var item in cart) {
-        sum = sum + cart[item][0];
-        document.getElementById('div' + item).innerHTML = "<button id='minus" + item + "' class='btn btn-success minus'>-</button> <span id='val" + item + "''>" + cart[item][0] + "</span> <button id='plus" + item + "' class='btn btn-success plus'> + </button>";
+    // Updating Popover when item is added
+    function updatePopover() {
+        console.log('We are inside updatePopover');
+        var cart = JSON.parse(localStorage.getItem('cart')) || {};
+        var popStr = "<h5> Cart for your items in my shopping cart </h5><div class='mx-2 my-2'>";
+        var i = 1;
+        for (var item in cart) {
+            var name = cart[item][1];  // Get the name from the cart object
+            popStr += "<b>" + i + "</b>. " + name.slice(0, 19) + "... Qty: " + cart[item][0] + '<br>';
+            i += 1;
+        }
+        popStr += "</div> <a href='/shop/checkout'><button class='btn btn-success' id='checkout'>Checkout</button></a> <button class='btn btn-success' onclick='clearCart()' id='clearCart'>Clear Cart</button>";
+        console.log(popStr);
+    
+        document.getElementById('popcart').setAttribute('data-content', popStr);
+        $('#popcart').popover('show');
     }
-    localStorage.setItem('cart', JSON.stringify(cart));
-    document.getElementById('cart').innerHTML = sum;
-    console.log(cart);
-    updatePopover(cart);
-}
-
-// If plus or minus button is clicked, change the cart as well as the display value
-$('.divpr').on("click", "button.minus", function() {
-    a = this.id.slice(7, );
-    cart['pr' + a][0] = cart['pr' + a][0] - 1;
-    cart['pr' + a][0] = Math.max(0, cart['pr' + a][0]);
-    if (cart['pr' + a][0] == 0){
-        document.getElementById('divpr' + a).innerHTML = '<button id="pr'+a+'" class="btn btn-success cart">Add to Cart</button>';
-        delete cart['pr'+a];
+    
+    
+    // Function to clear the cart
+    function clearCart() {
+        cart = JSON.parse(localStorage.getItem('cart'));
+        for (var item in cart) {
+            var itemDiv = document.getElementById('div' + item);
+            if (itemDiv) {
+                itemDiv.innerHTML = '<button id="' + item + '" class="btn btn-success cart">Add To Cart</button>';
+            }
+        }
+        localStorage.clear();
+        cart = {};
+        updateCart(cart);
     }
-    else{
-        document.getElementById('valpr' + a).innerHTML = cart['pr' + a][0];
-    }
-    updateCart(cart);
-});
-
-$('.divpr').on("click", "button.plus", function() {
-    a = this.id.slice(6, );
-    cart['pr' + a][0] = cart['pr' + a][0] + 1;
-    document.getElementById('valpr' + a).innerHTML = cart['pr' + a][0];
-    updateCart(cart);
-});
-</script>
+    
+    // Event listener for add to cart button
+    $('.divpr').on('click', 'button.cart', function() {
+        var idstr = this.id.toString();
+        if (cart[idstr] != undefined) {
+            qty = cart[idstr][0] + 1;
+        } else {
+            qty = 1;
+            var nameElement = document.getElementById('name' + idstr);
+            var priceElement = document.getElementById('price' + idstr);
+            if (nameElement && priceElement) {
+                name = nameElement.innerHTML;
+                price = priceElement.innerHTML;
+                cart[idstr] = [qty, name, parseInt(price)];
+            }
+        }
+        updateCart(cart);
+    });
+    
+    // Event listener for minus button
+    $('.divpr').on('click', 'button.minus', function() {
+        var idstr = this.id.slice(7);
+        if (cart['pr' + idstr] != undefined) {
+            cart['pr' + idstr][0] = cart['pr' + idstr][0] - 1;
+            cart['pr' + idstr][0] = Math.max(0, cart['pr' + idstr][0]);
+            if (cart['pr' + idstr][0] == 0) {
+                document.getElementById('divpr' + idstr).innerHTML = '<button id="pr' + idstr + '" class="btn btn-success cart">Add to Cart</button>';
+                delete cart['pr' + idstr];
+            } else {
+                document.getElementById('valpr' + idstr).innerHTML = cart['pr' + idstr][0];
+            }
+            updateCart(cart);
+        }
+    });
+    
+    // Event listener for plus button
+    $('.divpr').on('click', 'button.plus', function() {
+        var idstr = this.id.slice(6);
+        if (cart['pr' + idstr] != undefined) {
+            cart['pr' + idstr][0] = cart['pr' + idstr][0] + 1;
+            document.getElementById('valpr' + idstr).innerHTML = cart['pr' + idstr][0];
+            updateCart(cart);
+        }
+    });
+</script>   
 {% endblock %}
